--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Material3.Dark"
         tools:targetApi="31">
         <activity
+            android:name=".DoctorList"
+            android:exported="false" />
+        <activity
             android:name=".DeveloperActivity"
             android:exported="false" />
         <activity
